Insert completed request in bulk exec bash commands

--- a/queue.conf
+++ b/queue.conf
@@ -1,13 +1,13 @@
 {
 #	hypnotoad => {
-#		listen  => ['http://*:3000'],
-#		workers => 1
+#		listen		=> ['http://*:3000'],
+#		workers		=> 1
 #	},
 
-	'database'	=> {
-        dsn      => "DBI:mysql:host=localhost;database=minion",
-        username => "root",
-        password => ""
+	'database' => {
+        dsn    	=> "DBI:mysql:host=localhost;database=minion",
+        username	=> "root",
+        password	=> ""
 	},
 
 #	'tmp_dir'		=> '/movie_man/tmp',
@@ -27,35 +27,37 @@
 	},
 
 	# setup conversion type & extention of source file
-	'conversion_type'	=> {
+	'conversion_type' => {
 		'pdf2jpg'	=> 'pdf',
 	},
 
 	# required fields for 'put' action (1 - required, 0 - non required)
-	'put'	=> {
+	'put' => {
 		'action'			=> 1,
 		'conversion_type'	=> 1,
 		'source'			=> 1,
 		'output'			=> 1,
 		'quality'			=> 0,
 		'resolution'		=> 0,
+		'password'			=> 0,
 		'size'				=> 0
 	},
 
 	# required fields for 'ask' action (1 - required, 0 - non required)
-	'ask'	=> {
+	'ask' => {
 		'action'	=> 1,
 		'queue_id'	=> 1
 	},
 
 	# required fields for 'read' action (1 - required, 0 - non required)
-	'read'	=> {
+	'read' => {
 		'action'	=> 1,
 		'queue_id'	=> 1
 	},
 
 	# messages for response
 	'messages' => {
+		'done'						=> 'Current process is completed: ',
 		'not_exists_fields'			=> 'Does not exists required fields in request: ',
 		'not_support_conversion'	=> 'Does not supporting this type of conversion: ',
 		'not_support_media'			=> 'Does not supporting this media: ',
