Add callback function

--- a/queue.conf
+++ b/queue.conf
@@ -57,8 +57,10 @@
 
 	# messages for response
 	'messages' => {
-		'done'						=> 'Current process is completed: ',
+		'done_job'					=> 'Current process is completed: ',
 		'not_exists_fields'			=> 'Does not exists required fields in request: ',
+		'not_exists_job'			=> 'Does not exists job: pid',
+		'not_exists_job_id'			=> 'Required job id',
 		'not_support_conversion'	=> 'Does not supporting this type of conversion: ',
 		'not_support_media'			=> 'Does not supporting this media: ',
 		'password_protected'		=> 'Incorrect password',
