--- a/queue.conf
+++ b/queue.conf
@@ -10,10 +10,17 @@
         password	=> ""
 	},
 
+	# directory for exhange process data
+	'socket_dir'	=> '/home/timofey/works/code/mojo/queue/sockets',
+
 #	'tmp_dir'		=> '/movie_man/tmp',
-	'tmp_dir'		=> '/home/troll/workspace/5th/tmp/test/tmp',
-	'icm_profile'	=> '/home/troll/workspace/5th/tmp/test/srgb.icm',
-	'icc_profile'	=> '/home/troll/workspace/5th/tmp/test/srgb.icc',
+	'tmp_dir'		=> '/home/timofey/works/code/tmp',
+	'icm_profile'	=> '/home/timofey/works/code/tmp/test/srgb.icm',
+	'icc_profile'	=> '/home/timofey/works/code/tmp/test/srgb.icc',
+
+#	'tmp_dir'		=> '/tmp',
+#	'icm_profile'	=> '/home/troll/workspace/5th/tmp/test/srgb.icm',
+#	'icc_profile'	=> '/home/troll/workspace/5th/tmp/test/srgb.icc',
 
 	# external application
 	'exec_apps'	=> {
@@ -66,5 +73,6 @@
 		'password_protected'		=> 'Incorrect password',
 		'expected_optional'			=> 'Expected the optional',
 		'not_exists_resolution'		=> 'Could not to get resolution',
+		'deleting_error'			=> 'Error dureng deleting job: ',
 	}
 };
