Create Put command with history in /socket folder

--- a/queue.conf
+++ b/queue.conf
@@ -11,16 +11,17 @@
 	},
 
 	# directory for exhange process data
-	'socket_dir'	=> '/home/timofey/works/code/mojo/queue/sockets',
+#	'socket_dir'	=> '/home/timofey/works/code/mojo/queue/sockets',
+	'socket_dir'	=> '/home/troll/workspace/5th/mojo/queue/sockets',
 
 #	'tmp_dir'		=> '/movie_man/tmp',
-	'tmp_dir'		=> '/home/timofey/works/code/tmp',
-	'icm_profile'	=> '/home/timofey/works/code/tmp/test/srgb.icm',
-	'icc_profile'	=> '/home/timofey/works/code/tmp/test/srgb.icc',
+#	'tmp_dir'		=> '/home/timofey/works/code/tmp',
+#	'icm_profile'	=> '/home/timofey/works/code/tmp/test/srgb.icm',
+#	'icc_profile'	=> '/home/timofey/works/code/tmp/test/srgb.icc',
 
-#	'tmp_dir'		=> '/tmp',
-#	'icm_profile'	=> '/home/troll/workspace/5th/tmp/test/srgb.icm',
-#	'icc_profile'	=> '/home/troll/workspace/5th/tmp/test/srgb.icc',
+	'tmp_dir'		=> '/home/troll/workspace/5th/tmp/tmp',
+	'icm_profile'	=> '/home/troll/workspace/5th/tmp/test/srgb.icm',
+	'icc_profile'	=> '/home/troll/workspace/5th/tmp/test/srgb.icc',
 
 	# external application
 	'exec_apps'	=> {
@@ -66,7 +67,7 @@
 	'messages' => {
 		'done_job'					=> 'Current process is completed: ',
 		'not_exists_fields'			=> 'Does not exists required fields in request: ',
-		'not_exists_job'			=> 'Does not exists job: pid',
+		'not_exists_job'			=> 'Does not exists job: pid ',
 		'not_exists_job_id'			=> 'Required job id',
 		'not_support_conversion'	=> 'Does not supporting this type of conversion: ',
 		'not_support_media'			=> 'Does not supporting this media: ',
