Create done sub & move jobs from queue. Part 1

--- a/queue.conf
+++ b/queue.conf
@@ -19,18 +19,18 @@
 	'limit_show_queue'	=> 200,		# limit for preexec jobs queue
 
 	# directory for store queues (queue, pids, done)
-	'storage_dir'	=> '/home/timofey/works/code/mojo/queue/storage',
-#	'storage_dir'	=> '/home/troll/workspace/5th/mojo/queue/storage',
+#	'storage_dir'	=> '/home/timofey/works/code/mojo/queue/storage',
+	'storage_dir'	=> '/home/troll/workspace/5th/mojo/queue/storage',
 
 	# directory for exhange process data
-	'output_dir'	=> '/home/timofey/works/code/mojo/queue/output_dir',
-#	'output_dir'	=> '/home/troll/workspace/5th/mojo/queue/output_dir',
+#	'output_dir'	=> '/home/timofey/works/code/mojo/queue/output_dir',
+	'output_dir'	=> '/home/troll/workspace/5th/mojo/queue/output_dir',
 
-	'tmp_dir'		=> '/home/timofey/works/code/mojo/queue/tmp',
-	'icm_profile'	=> '/home/timofey/works/code/tmp/test/srgb.icm',
-	'icc_profile'	=> '/home/timofey/works/code/tmp/test/srgb.icc',
+#	'tmp_dir'		=> '/home/timofey/works/code/mojo/queue/tmp',
+#	'icm_profile'	=> '/home/timofey/works/code/tmp/test/srgb.icm',
+#	'icc_profile'	=> '/home/timofey/works/code/tmp/test/srgb.icc',
 
-#	'tmp_dir'		=> '/home/troll/workspace/5th/mojo/queues/tmp',
+	'tmp_dir'		=> '/home/troll/workspace/5th/mojo/queues/tmp',
 #	'icm_profile'	=> '/home/troll/workspace/5th/tmp/test/srgb.icm',
 #	'icc_profile'	=> '/home/troll/workspace/5th/tmp/test/srgb.icc',
 
@@ -82,6 +82,7 @@
 		'not_exists_job'			=> 'Does not exists job: pid ',
 		'not_exists_job_id'			=> 'Required job id',
 		'not_exists_pid'			=> 'Does not exists pid',
+		'not_exists_log'			=> 'Does not exists log file',
 		'not_support_conversion'	=> 'Does not supporting this type of conversion: ',
 		'not_support_media'			=> 'Does not supporting this media: ',
 		'password_protected'		=> 'Incorrect password',
@@ -90,5 +91,6 @@
 		'deleting_error'			=> 'Error dureng deleting job: ',
 
 		'ran_success'				=> 'Process ran success. pid: ',
+		'can_not_open_queue'	 	=> 'Can not open quque: ',
 	}
 };
