Change config file

--- a/queue.conf
+++ b/queue.conf
@@ -10,11 +10,12 @@
 #		password	=> ""
 #	},
 
-	# Path to log file
-	'log'			=> '/home/timofey/works/code/mojo/queue/log.txt',
+	# Debug flag and Path to log file
+	'debug'			=> 1,
+	'log'			=> './log.txt',
 
 	# Application home directory
-	'home_dir'		=> '/home/timofey/works/code/mojo/queue',
+	'home_dir'		=> './queue',
 
 	# limit for queues
 	'limit'				=> 2,		# limit for running jobs
@@ -22,20 +23,15 @@
 	'limit_show_queue'	=> 200,		# limit for preexec jobs queue
 
 	# directory for store queues (queue, pids, done)
-	'storage_dir'	=> '/home/timofey/works/code/mojo/queue/storage',
-#	'storage_dir'	=> '/home/troll/workspace/5th/mojo/queue/storage',
+	'storage_dir'	=> './storage',
 
 	# directory for exhange process data
-	'output_dir'	=> '/home/timofey/works/code/mojo/queue/output_dir',
-#	'output_dir'	=> '/home/troll/workspace/5th/mojo/queue/output_dir',
+	'output_dir'	=> './output_dir',
 
-	'tmp_dir'		=> '/home/timofey/works/code/mojo/queue/tmp',
-	'icm_profile'	=> '/home/timofey/works/code/tmp/test/srgb.icm',
-	'icc_profile'	=> '/home/timofey/works/code/tmp/test/srgb.icc',
+	'tmp_dir'		=> './tmp',
+#	'icm_profile'	=> '/home/timofey/works/code/tmp/test/srgb.icm',
+#	'icc_profile'	=> '/home/timofey/works/code/tmp/test/srgb.icc',
 
-#	'tmp_dir'		=> '/home/troll/workspace/5th/mojo/queues/tmp',
-#	'icm_profile'	=> '/home/troll/workspace/5th/tmp/test/srgb.icm',
-#	'icc_profile'	=> '/home/troll/workspace/5th/tmp/test/srgb.icc',
 
 	# external application
 	'exec_apps'	=> {
