Fix duplicated queus

--- a/queue.conf
+++ b/queue.conf
@@ -11,6 +11,13 @@
 #	},
 
 	# Debug flag and Path to log file
+	# 0 - unlock
+	# l - lock for load queues
+	# w - lock for store queues
+	# m - lock for move queues
+	'lock'			=> 0,
+
+	# Debug flag and Path to log file
 	'debug'			=> 1,
 	'log'			=> './log.txt',
 
@@ -29,8 +36,8 @@
 	'output_dir'	=> './output_dir',
 
 	'tmp_dir'		=> './tmp',
-#	'icm_profile'	=> '/home/timofey/works/code/tmp/test/srgb.icm',
-#	'icc_profile'	=> '/home/timofey/works/code/tmp/test/srgb.icc',
+	'icm_profile'	=> './public/profile/srgb.icm',
+	'icc_profile'	=> './public/profile/srgb.icc',
 
 
 	# external application
