Add profiles and change readme file

--- a/queue.conf
+++ b/queue.conf
@@ -10,6 +10,9 @@
 #		password	=> ""
 #	},
 
+	# application URL
+	'url'			=> 'http://queue',
+
 	# Debug flag and Path to log file
 	# 0 - unlock
 	# l - lock for load queues
@@ -21,13 +24,13 @@
 	'debug'			=> 1,
 	'log'			=> './log.txt',
 
-	# Application home directory
-	'home_dir'		=> './queue',
-
 	# limit for queues
 	'limit'				=> 2,		# limit for running jobs
 	'limit_show_done'	=> 200,		# limit for show done jobs
 	'limit_show_queue'	=> 200,		# limit for preexec jobs queue
+
+	# Application home directory
+	'home_dir'		=> './queue',
 
 	# directory for store queues (queue, pids, done)
 	'storage_dir'	=> './storage',
