Fix queues lock

--- a/queue.conf
+++ b/queue.conf
@@ -94,12 +94,14 @@
 		'not_exists_log'			=> 'Does not exists log file',
 		'not_support_conversion'	=> 'Does not supporting this type of conversion: ',
 		'not_support_media'			=> 'Does not supporting this media: ',
-		'password_protected'		=> 'Incorrect password',
-		'expected_optional'			=> 'Expected the optional',
 		'not_exists_resolution'		=> 'Could not to get resolution',
 		'deleting_error'			=> 'Error dureng deleting job: ',
 
+		'password_protected'		=> 'Incorrect password',
+		'expected_optional'			=> 'Expected the optional',
+
 		'ran_success'				=> 'Process ran success. pid: ',
 		'can_not_open_queue'	 	=> 'Can not open quque: ',
+		'can_not_create_dir'	 	=> 'Can not create directory for job: ',
 	}
 };
