--- a/queue.conf
+++ b/queue.conf
@@ -101,7 +101,8 @@
 		'expected_optional'			=> 'Expected the optional',
 
 		'ran_success'				=> 'Process ran success. pid: ',
-		'can_not_open_queue'	 	=> 'Can not open quque: ',
+		'can_not_open_queue'	 	=> 'Can not open queue: ',
 		'can_not_create_dir'	 	=> 'Can not create directory for job: ',
+		'can_not_create_job'	 	=> 'Can not create sh for job: ',
 	}
 };
