Full hotfix for storing queues. Stable version

--- a/queue.conf
+++ b/queue.conf
@@ -16,8 +16,7 @@
 	# Debug flag and Path to log file
 	# 0 - unlock
 	# l - lock for load queues
-	# w - lock for store queues
-	# m - lock for move queues
+	# m - lock for move queues (storing all queues while moving)
 	'lock'			=> 0,
 
 	# Debug flag and Path to log file
@@ -30,7 +29,9 @@
 	'limit_show_queue'	=> 200,		# limit for preexec jobs queue
 
 	# Application home directory
-	'home_dir'		=> './queue',
+	'home_dir'		=> './',
+	'templates_jobs'=> 'jobs',				# path to dir for mojolicious renderer
+	'templates_dir'	=> './templates/jobs',	# path to dir for manage job tempaltes
 
 	# directory for store queues (queue, pids, done)
 	'storage_dir'	=> './storage',
@@ -92,6 +93,7 @@
 		'not_exists_job_id'			=> 'Required job id',
 		'not_exists_pid'			=> 'Does not exists pid',
 		'not_exists_log'			=> 'Does not exists log file',
+		'not_exists_queues_dir'		=> 'Does not exists queues directory',
 		'not_support_conversion'	=> 'Does not supporting this type of conversion: ',
 		'not_support_media'			=> 'Does not supporting this media: ',
 		'not_exists_resolution'		=> 'Could not to get resolution',
