--- a/queue.conf
+++ b/queue.conf
@@ -37,12 +37,12 @@
 	'storage_dir'	=> './storage',
 
 	# directory for exhange process data
+	'source_dir'	=> './source_dir',
 	'output_dir'	=> './output_dir',
 
 	'tmp_dir'		=> './tmp',
 	'icm_profile'	=> './public/profile/srgb.icm',
 	'icc_profile'	=> './public/profile/srgb.icc',
-
 
 	# external application
 	'exec_apps'	=> {
@@ -87,6 +87,7 @@
 	# messages for response
 	'messages' => {
 		'done_job'					=> 'Current process is completed: ',
+		'empty_job'					=> 'Empty request to exec',
 		'exists_job'				=> 'Similar job exists',
 		'not_exists_fields'			=> 'Does not exists required fields in request: ',
 		'not_exists_job'			=> 'Does not exists job: pid ',
@@ -94,9 +95,11 @@
 		'not_exists_pid'			=> 'Does not exists pid',
 		'not_exists_log'			=> 'Does not exists log file',
 		'not_exists_queues_dir'		=> 'Does not exists queues directory',
-		'not_support_conversion'	=> 'Does not supporting this type of conversion: ',
-		'not_support_media'			=> 'Does not supporting this media: ',
 		'not_exists_resolution'		=> 'Could not to get resolution',
+
+		'not_support_media'			=> 'Does not supporting this media: ',
+		'not_support_conversion'	=> 'Does not supporting this type of conversion: ',
+
 		'deleting_error'			=> 'Error dureng deleting job: ',
 
 		'password_protected'		=> 'Incorrect password',
