Add pdf2png template and changes in load balancer

--- a/queue.conf
+++ b/queue.conf
@@ -28,6 +28,11 @@
 	'limit_show_done'	=> 200,		# limit for show done jobs
 	'limit_show_queue'	=> 200,		# limit for preexec jobs queue
 
+	# limits for load balancer (in percents)
+	'cpu'	=> 90,
+	'mem'	=> 90,
+	'hdd'	=> 90,
+
 	# Application home directory
 	'home_dir'		=> './',
 	'templates_jobs'=> 'jobs',				# path to dir for mojolicious renderer
@@ -51,6 +56,7 @@
 		'pdfinfo'	=> '/usr/bin/pdfinfo',
 		'pdf2swf'	=> '/usr/bin/pdf2swf',
 		'jpeg2swf'	=> '/usr/bin/jpeg2swf',
+		'png2swf'	=> '/usr/bin/png2swf',
 		'dcraw'		=> '/usr/bin/dcraw',
 		'convert'	=> 'magick',
 	},
