Change load balancer

--- a/queue.conf
+++ b/queue.conf
@@ -29,9 +29,9 @@
 	'limit_show_queue'	=> 200,		# limit for preexec jobs queue
 
 	# limits for load balancer (in percents)
-	'cpu'	=> 90,
-	'mem'	=> 90,
-	'hdd'	=> 90,
+	'load'		=> 90,	# max load average
+	'free_mem'	=> 90,	# max free memory
+	'io'		=> 90,	# max hdd in/out util
 
 	# Application home directory
 	'home_dir'		=> './',
@@ -41,16 +41,9 @@
 	# directory for store queues (queue, pids, done)
 	'storage_dir'	=> './storage',
 
-	# directory for exhange process data
-	'source_dir'	=> './source_dir',
-	'output_dir'	=> './output_dir',
-
-	'tmp_dir'		=> './tmp',
-	'icm_profile'	=> './public/profile/srgb.icm',
-	'icc_profile'	=> './public/profile/srgb.icc',
-
-	# external application
+	# variables for exec-templates
 	'exec_apps'	=> {
+		# applications
 		'pdftk'		=> '/usr/bin/pdftk',
 		'gs'		=> '/usr/bin/gs',
 		'pdfinfo'	=> '/usr/bin/pdfinfo',
@@ -59,6 +52,16 @@
 		'png2swf'	=> '/usr/bin/png2swf',
 		'dcraw'		=> '/usr/bin/dcraw',
 		'convert'	=> 'magick',
+
+		# directories
+		'tmp_dir'		=> './tmp',
+		# directory for exhange process data
+		'source_dir'	=> './source_dir',
+		'output_dir'	=> './output_dir',
+
+		# others
+		'icm_profile'	=> './public/profile/srgb.icm',
+		'icc_profile'	=> './public/profile/srgb.icc',
 	},
 
 	# setup conversion type & extention of source file
