Load balancer GUI

--- a/queue.conf
+++ b/queue.conf
@@ -25,8 +25,8 @@
 
 	# limit for queues
 	'limit'				=> 2,		# limit for running jobs
+	'limit_runung_max'	=> 20,		# limit for running jobs
 	'limit_show_done'	=> 200,		# limit for show done jobs
-	'limit_show_queue'	=> 200,		# limit for preexec jobs queue
 
 	# limits for load balancer (in percents)
 	'load'		=> 90,	# max load average
