Add edit/save exes templates

--- a/queue.conf
+++ b/queue.conf
@@ -97,12 +97,15 @@
 	'messages' => {
 		'done_job'					=> 'Current process is completed: ',
 		'empty_job'					=> 'Empty request to exec',
+		'empty_preset'				=> 'Empty preset id for edit',
 		'exists_job'				=> 'Similar job exists',
+		'not_exists_preset'			=> 'Does not exists preset job named: ',
 		'not_exists_fields'			=> 'Does not exists required fields in request: ',
 		'not_exists_job'			=> 'Does not exists job: pid ',
 		'not_exists_job_id'			=> 'Required job id',
 		'not_exists_pid'			=> 'Does not exists pid',
 		'not_exists_log'			=> 'Does not exists log file',
+		'not_exists_dir'			=> 'Does not exists directory: ',
 		'not_exists_queues_dir'		=> 'Does not exists queues directory',
 		'not_exists_resolution'		=> 'Could not to get resolution',
 
@@ -111,10 +114,12 @@
 
 		'deleting_error'			=> 'Error dureng deleting job: ',
 
+		'preset_saved'				=> 'Preset success saved: ',
 		'password_protected'		=> 'Incorrect password',
 		'expected_optional'			=> 'Expected the optional',
 
 		'ran_success'				=> 'Process ran success. pid: ',
+		'can_not_rw_preset'			=> 'Can not read/write preset job named: ',
 		'can_not_open_queue'	 	=> 'Can not open queue: ',
 		'can_not_create_dir'	 	=> 'Can not create directory for job: ',
 		'can_not_create_job'	 	=> 'Can not create sh for job: ',
