--- a/queue.conf
+++ b/queue.conf
@@ -64,21 +64,13 @@
 		'icc_profile'	=> './public/profile/srgb.icc',
 	},
 
-	# setup conversion type & extention of source file
-	'conversion_type' => {
-		'pdf2jpg'	=> 'pdf',
-	},
-
 	# required fields for 'put' action (1 - required, 0 - non required)
 	'put' => {
 		'action'			=> 1,
 		'conversion_type'	=> 1,
 		'source'			=> 1,
 		'output'			=> 1,
-		'quality'			=> 0,
-		'resolution'		=> 0,
-		'password'			=> 0,
-		'size'				=> 0
+		'options'			=> 0
 	},
 
 	# required fields for 'ask' action (1 - required, 0 - non required)
